# modules_uefiui

./: CMakeLists.txt
include/: common.h  list.h
include/lib/: hashmap.h  strhashmap.h
include/uui/: canvas.h  common.h  components.h  context.h  fb.h  resources.h
include/uui/layouts/: absolute.h  linear.h
include/uui/views/: rect.h  view.h  viewgroup.h
include_posix/: uui_platform.h
lib/: hashmap.c  strhashmap.c
resources/components/app/: Main.uui
src/: main.c  maintest.c  platform.c  uui.lex  uui.y
src/uui/: canvas.c  components.c  fb.c  resources.c
src/uui/layouts/: absolute.c  linear.c
src/uui/views/: rect.c  view.c  viewgroup.c
